facebook FacebookUrlSchemeSuffix miss

--- a/plugin.xml
+++ b/plugin.xml
@@ -19,6 +19,7 @@
 
     <preference name="APP_ID" />
     <preference name="APP_NAME" />
+    <preference name="URL_SCHEME" />
 
     <engines>
         <!-- Requires > 3.5.0 because of the custom Framework tag for iOS [CB-6698] -->
@@ -101,12 +102,6 @@
         </config-file>
         <config-file target="*-Info.plist" parent="CFBundleURLTypes">
           <array>
-            <dict>
-              <key>CFBundleURLSchemes</key>
-              <array>
-                <string>fb$APP_ID$</string>
-              </array>
-            </dict>
               <dict>
                   <key>CFBundleURLSchemes</key>
                   <array>
